--- a/templates/site/index.html
+++ b/templates/site/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <h1>Homepage</h1>
     <p><a href="/faves">Go to private page</a></p>
     <p><a href="/login">Log In</a></p>
     <p><a href="/register">Create an account</a></p>
+    <input id="input" type="hidden" value="" >
+    <button id="button">Add Sub</button>
+    <nav id="nav"></nav>
+    <div id="content"></div>
+
+    <script type="text/javascript" src="client.js"></script>
+
   </body>
 </html>
