--- a/templates/site/index.html
+++ b/templates/site/index.html
@@ -4,26 +4,26 @@
     <meta charset="utf-8">
     <title>{{title}}</title>
     <link rel="stylesheet" href="/style.css">
+    {{#if username}}{{else}}
+    <link rel="stylesheet" href="/registered.css"/>
+    {{/if}}
   </head>
   <body>
-    <!--<h1>Homepage</h1>-->
-    <!--<p><a href="/faves">Go to private page</a></p>-->
-    <!--<p><a href="/login">Log In</a></p>-->
-    <!--<p><a href="/register">Create an account</a></p>-->
-
-    <!--OLD:::<br/>-->
     <nav>
       {{#if username}}
       <p class = 'hello'>
-        Hello! {{username}}
+        Logged In As: {{username}}
       </p>
-      <p><a href="/faves">Go To My Faves</a></p>
+      <p><a href="/faves">Faves</a></p>
       <p><a href="/logout">Log Out</a></p>
       {{else}}
       <p><a href="/login">Log In</a></p>
-      <p><a href="/register">Create an account</a></p>
+      <p><a href="/register">Register</a></p>
       {{/if}}
+      <p><a href="/">Main List</a></p>
     </nav>
+    <h3>Reddit Space Faves!</h3>
+
     <input id="input" type="hidden" value="" >
     <button id="button">Add Sub</button>
     <!--<nav id="nav"></nav>-->
